--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,7 @@ pids
 lib-cov
 
 # Coverage directory used by tools like istanbul
-coverage
-
+coverage 
 # nyc test coverage
 .nyc_output
 
@@ -35,3 +34,9 @@ jspm_packages
 
 # Optional REPL history
 .node_repl_history
+
+# customize
+.idea
+yarn.lock
+dist
+public/build
